// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldset renders correctly with error 1`] = `
<div class="govuk-form-group govuk-form-group--error">
  <fieldset class="govuk-fieldset"
            id="test-fieldset"
            aria-describedby="test-fieldset-error"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Fill the form
    </legend>
    <span class="govuk-error-message"
          id="test-fieldset-error"
    >
      There was an error
    </span>
    <input type="text"
           name="test-input-1"
    >
    <input type="text"
           name="test-input-2"
    >
  </fieldset>
</div>
`;

exports[`FormFieldset renders correctly with hint 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-fieldset"
            aria-describedby="test-fieldset-hint"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Fill the form
    </legend>
    <span class="govuk-hint"
          id="test-fieldset-hint"
    >
      All fields are required
    </span>
    <input type="text"
           name="test-input-1"
    >
    <input type="text"
           name="test-input-2"
    >
  </fieldset>
</div>
`;

exports[`FormFieldset renders correctly with required props 1`] = `
<div class="govuk-form-group">
  <fieldset class="govuk-fieldset"
            id="test-fieldset"
  >
    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
      Fill the form
    </legend>
    <input type="text"
           name="test-input-1"
    >
    <input type="text"
           name="test-input-2"
    >
  </fieldset>
</div>
`;
